# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  urls
page_analyzer/: app.py
page_analyzer/templates/: base.html
page_analyzer/templates/pages/: index.html
page_analyzer/templates/urls/: index.html  show_url.html
page_analyzer/utils/: index.py
