[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.9",
]

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[project.scripts]
page_analyzer = "page_analyzer:app"
